--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -3,25 +3,11 @@
   left: 55%;
 }
 
-.active {
-  color: rgb(255, 193, 7);
-  background: white;
-}
-
-.container {
-  display: flex;
-  position: fixed;
-  flex-direction: column;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
 .main {
+  width: 100%;
   display: flex;
   height: 100%;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -31,22 +17,36 @@
 .left {
   width: 25%;
   height: 100%;
-  background: rgb(245, 245, 245);
+  display: flex;
+  flex-direction: column;
+  background: rgba(224, 224, 224, 0.5);
 }
 
-.left view {
-  padding-top: 10rpx;
-  padding-bottom: 10rpx;
+.left .active {
+  height: 100rpx;
+  line-height: 100rpx;
   text-align: center;
+  font-weight: 500;
+  color: rgba(255, 179, 16, 1);
+  background: white;
 }
 
-.left scroll-view {
-  background: rgba(255, 0, 0, 0);
+.left .inactive {
+  height: 100rpx;
+  line-height: 100rpx;
+  text-align: center;
+  font-weight: 500;
+  color: rgba(66, 54, 30, 1);
 }
 
 .right {
   width: 75%;
   height: 100%;
+}
+
+.right scroll-view {
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .listItem {
@@ -56,7 +56,7 @@
 }
 
 .stockClear {
-  background: rgb(245, 245, 245);
+  background: rgba(224, 224, 224, 0.5);
   border-radius: 5rpx;
 }
 
@@ -73,7 +73,8 @@
   padding-bottom: 15px;
   padding-left: 25rpx;
   padding-right: 25rpx;
-  color: rgb(71, 71, 71);
+  color: rgba(66, 54, 30, 1);
+  font-weight: 500;
 }
 
 .listText {
@@ -82,16 +83,6 @@
   margin-left: 30rpx;
   flex-direction: column;
   justify-content: space-between;
-}
-
-.selltext {
-  width: 210rpx;
-  font-size: 6rpx;
-  text-align: center;
-  border-radius: 5rpx;
-  font-stretch: ultra-condensed;
-  color: rgba(241, 134, 46, 0.8);
-  border: 0.5rpx solid rgba(241, 134, 46, 0.5);
 }
 
 .listText .view {
@@ -108,193 +99,25 @@
 }
 
 .listText text {
-  font-size: 28rpx;
+  font-size: 30rpx;
+  font-weight: 500;
+  color: rgb(20, 20, 20);
 }
 
 .listText .oldPrice {
   text-decoration: line-through;
   font-style: italic;
   font-size: 34rpx;
-  color: silver;
+  color: rgba(111, 104, 78, 1);
 }
 
 .listText .unitPrice {
-  color: rgb(255, 193, 7);
+  color: rgba(255, 179, 16, 1);
   font-size: 34rpx;
 }
 
 .listText .stockNum {
-  color: rgb(151, 151, 151);
-}
-
-/* menu for backend deploy */
-.menu {
-  position: fixed;
-  width: 93rpx;
-  height: 93rpx;
-  left: 30rpx;
-  z-index: 1000;
-  display: flex;
-  border-radius: 10rpx;
-  align-items: center;
-  justify-content: center;
-  background: rgb(71, 71, 71);
-  box-shadow: 0px 2px 2px 2px rgb(204, 204, 204);
-}
-
-.menu image {
-  width: 65%;
-  height: 65%;
-}
-
-.addMenu {
-  bottom: 470rpx;
-}
-
-.orderMenu {
-  bottom: 340rpx;
-}
-
-.deployMenu {
-  bottom: 200rpx;
-}
-
-.menu-cancel {
-  position: absolute;
-  z-index: 1000;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-/* shopCar */
-
-.shopCar {
-  position: fixed;
-  width: 100rpx;
-  height: 100rpx;
-  bottom: 30rpx;
-  left: 30rpx;
-  display: flex;
-  border-radius: 90rpx;
-  align-items: center;
-  justify-content: center;
-  background: rgba(255, 193, 7, 255);
-}
-
-.shopCar image {
-  width: 50%;
-  height: 50%;
-}
-
-.shopCar text {
-  position: fixed;
-  color: white;
-  font-size: 26rpx;
-  margin-left: 25rpx;
-  margin-top: -40rpx;
-  font-weight: 600;
-  background: red;
-  border-radius: 90rpx;
-  width: 38rpx;
-  height: 38rpx;
-  text-align: center;
-}
-
-/*模态框*/
-
-.modals {
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
-.modals-cancel {
-  position: absolute;
-  z-index: 1000;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.bottom-dialog-body {
-  position: absolute;
-  z-index: 10001;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 70%;
-  background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.dialogHead {
-  padding: 30rpx;
-  background: rgb(245, 245, 245);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.dialogHead text {
-  font-size: 26rpx;
-  color: gray;
-}
-
-.shopCarItem {
-  padding-left: 30rpx;
-  padding-right: 30rpx;
-}
-
-.shopCarGoodsImg {
-  width: 120rpx;
-  height: 100rpx;
-  min-width: 120rpx;
-  border-radius: 0rpx;
-}
-
-.shopCarEmptyImg {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.shopCarEmptyImg image {
-  width: 200rpx;
-  height: 200rpx;
-}
-
-.shopCarEmptyImg text {
-  color: gray;
-  margin-top: 20rpx;
-}
-
-/*动画前初始位置*/
-
-.bottom-pos {
-  -webkit-transform: translateY(100%);
-  transform: translateY(100%);
-}
-
-.buy {
-  width: 90%;
-  background: rgba(255, 193, 7, 255);
-  border-radius: 45rpx;
-  margin-bottom: 4%;
-  color: white;
-  font-size: 36rpx;
+  color: rgba(111, 104, 78, 1);
 }
 
 ::-webkit-scrollbar {
