--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,8 @@
 <!--index.wxml-->
 <image class="emptyHolder" src="../image/emptyData.png" hidden="{{!showEmptyImage}}" />
 
+<navigation />
+
 <view class='main'>
 	<!-- leftClassify -->
 	<view class='left'>
@@ -11,7 +13,7 @@
 
 	<!-- rightContent -->
 	<view class='right'>
-		<scroll-view scroll-y="true" style="height: 100%" bindscroll="scroll" scroll-top="{{scrollTop}}" scroll-into-view="{{'inToview'+rigId}}">
+		<scroll-view scroll-y="true" style="height : 100%;" bindscroll="scroll" scroll-top="{{scrollTop}}" scroll-into-view="{{'inToview'+rigId}}">
 			<block wx:for="{{goodsListData}}" wx:for-list="item" wx:key="key">
 
 				<view class='itemTitle' id="{{'inToview'+item.id}}">{{item.text}}</view>
