--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -6,12 +6,11 @@
 .main {
   width: 100%;
   display: flex;
-  height: 100%;
   position: fixed;
-  top: 0;
+  top: 130rpx;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 0rpx;
 }
 
 .left {
@@ -45,14 +44,14 @@
 }
 
 .right scroll-view {
-  overflow-y: scroll;
-  overflow-x: hidden;
+  white-space: nowrap;
 }
 
 .listItem {
   display: flex;
   flex-direction: row;
   padding: 25rpx;
+  display:inline-block;
 }
 
 .stockClear {
@@ -106,13 +105,12 @@
 
 .listText .oldPrice {
   text-decoration: line-through;
-  font-style: italic;
   font-size: 34rpx;
   color: rgba(111, 104, 78, 1);
 }
 
 .listText .unitPrice {
-  color: rgba(255, 179, 16, 1);
+  color: rgb(255, 102, 0);
   font-size: 34rpx;
 }
 
