--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,25 +1,23 @@
 <!--index.wxml-->
-<image class="emptyHolder" src="../image/emptyData.png" hidden="{{!showEmptyImage}}" />
+<navigation bindleftImgTap='onClickSearch' />
 
-<navigation />
-
-<view class='main'>
+<view class='main' style="top:{{barHeight}}px;">
 	<!-- leftClassify -->
 	<view class='left'>
-		<block wx:for="{{goodsClassifies}}" wx:for-list="item" wx:key="key">
+		<block wx:for="{{classifies}}" wx:for-list="item" wx:key="key">
 			<text class="{{classifySelect == item.id ? 'active' : 'inactive'}}" data-id='{{item.id}}' bindtap='onClickClassify'>{{item.text}}</text>
 		</block>
 	</view>
 
 	<!-- rightContent -->
 	<view class='right'>
-		<scroll-view scroll-y="true" style="height : 100%;" bindscroll="scroll" scroll-top="{{scrollTop}}" scroll-into-view="{{'inToview'+rigId}}">
-			<block wx:for="{{goodsListData}}" wx:for-list="item" wx:key="key">
+		<scroll-view scroll-y="true" style="height : 100%;" bindscroll="scroll" scroll-into-view="{{'inToview'+rigId}}">
+			<block wx:for="{{goodsList}}" wx:for-list="item" wx:key="key">
 
 				<view class='itemTitle' id="{{'inToview'+item.id}}">{{item.text}}</view>
 
 				<block wx:for="{{item.content}}" wx:key="key">
-					<view class='listItem {{item.stockNum == 0 ? "stockClear" : ""}}' data-text="{{}}">
+					<view class='listItem {{item.stockNum == 0 ? "stockClear" : ""}}'>
 						<image class='goodsImg' src='{{item.url}}' bindtap="previewImage" data-url="{{item.url}}" mode="aspectFill"></image>
 
 						<view class='listText'>
