--- a/pages/locationEdit/locationEdit.wxss
+++ b/pages/locationEdit/locationEdit.wxss
@@ -1,24 +1,54 @@
 /* pages/locationEdit/locationEdit.wxss */
 
-text {
-  font-weight: 500;
-}
-
-page {
-  display: block;
-  min-height: 100%;
-}
-
 .content {
   margin: 20rpx;
   margin-top: 50rpx;
 }
 
-.inputLocation{
-  border-bottom: 1px solid rgb(197, 197, 197);
+.cityContent {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
 }
 
-.saveLocation{
+.city {
+  height: 70rpx;
+  font-size: 30rpx;
+  line-height: 70rpx;
+  margin-left: 0rpx;
+  margin-right: 10rpx;
+  padding-left: 10rpx;
+  padding-right: 10rpx;
+}
+
+.area {
+  height: 70rpx;
+  font-size: 30rpx;
+  line-height: 70rpx;
+  margin-left: 10rpx;
+  margin-right: 0rpx;
+  padding-left: 10rpx;
+  padding-right: 10rpx;
+}
+
+.detail {
+  height: 70rpx;
+  font-size: 30rpx;
+  line-height: 70rpx;
+  margin-left: 10rpx;
+  margin-right: 0rpx;
+  padding-left: 10rpx;
+  padding-right: 10rpx;
+}
+
+input {
+  height: 70rpx;
+  padding: 10rpx;
+  margin-top: 30rpx;
+  border: 0.5px solid rgb(197, 197, 197);
+}
+
+.saveLocation {
   margin-top: 100rpx;
   background: rgba(255, 193, 7, 255);
   border-radius: 45rpx;
