--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,36 +1,21 @@
 /**index.wxss**/
-.emptyHolder {
-  left: 55%;
-}
 
 .main {
-  width: 100%;
-  display: flex;
-  position: fixed;
-  top: 0rpx;
   left: 0;
   right: 0;
-  bottom: 0rpx;
+  bottom: 0;
+  display: flex;
+  position: fixed;
+  background: rgba(224, 224, 224, 0.35);
 }
 
 .left {
   width: 25%;
-  height: 100%;
   display: flex;
   flex-direction: column;
-  background: rgba(224, 224, 224, 0.5);
 }
 
-.left .active {
-  height: 100rpx;
-  line-height: 100rpx;
-  text-align: center;
-  font-weight: 500;
-  color: rgba(255, 179, 16, 1);
-  background: white;
-}
-
-.left .inactive {
+.left text {
   height: 100rpx;
   line-height: 100rpx;
   text-align: center;
@@ -38,25 +23,23 @@
   color: rgba(66, 54, 30, 1);
 }
 
-.right {
-  width: 75%;
-  height: 100%;
-  -webkit-overflow-scrolling: touch
+.left .active {
+  color: rgba(255, 179, 16, 1);
+  background: white;
 }
 
-.right scroll-view {
-  -webkit-overflow-scrolling: touch
+ scroll-view {
+  width: 75%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .listItem {
   display: flex;
   flex-direction: row;
   padding: 10px;
-}
-
-.stockClear {
-  background: rgba(224, 224, 224, 0.5);
-  border-radius: 5rpx;
+  background: white;
+  margin-top: 1rpx;
 }
 
 .goodsImg {
